--- a/FoodDeliveryrestart/Components/Pages/MallPages/Select.razor
+++ b/FoodDeliveryrestart/Components/Pages/MallPages/Select.razor
@@ -1,4 +1,5 @@
 ﻿@page "/grouporders/selectmall"
+@rendermode InteractiveServer
 @using System.Linq
 @using System.Collections.Generic
 @using FoodDeliveryrestart.Domain
